Updated health (#6)
* Updated health

* Fixed linter
